<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_bottom_sheet">

        <View
            android:id="@+id/view"
            android:layout_width="100dp"
            android:layout_height="7dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_sheet_handle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.likeminds.feedsx.branding.customview.LMFeedTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:lineSpacingExtra="8sp"
            android:text="@string/discard_resource"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:textStyle="normal"
            app:fontType="medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <com.likeminds.feedsx.branding.customview.LMFeedTextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:lineSpacingExtra="7sp"
            android:text="@string/discard_resource_description"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            android:textStyle="normal"
            app:fontType="regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <LinearLayout
            android:id="@+id/ll_discard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="8dp"
                android:src="@drawable/ic_delete_bin_simple"
                tools:ignore="ContentDescription" />

            <com.likeminds.feedsx.branding.customview.LMFeedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:lineSpacingExtra="7sp"
                android:text="@string/discard_this_resource"
                android:textColor="@color/dark_grey"
                android:textSize="14sp"
                android:textStyle="normal"
                app:fontType="regular" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?selectableItemBackground"
            android:orientation="horizontal"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_discard">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="8dp"
                android:src="@drawable/ic_continue"
                tools:ignore="ContentDescription" />

            <com.likeminds.feedsx.branding.customview.LMFeedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:lineSpacingExtra="7sp"
                android:text="@string/continue_creating_resource"
                android:textColor="@color/dark_grey"
                android:textSize="14sp"
                android:textStyle="normal"
                app:fontType="regular"
                app:textType="special" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>