<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingTop="24dp"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.likeminds.feedsx.branding.customview.LMFeedTextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/remove_attachment"
                    android:textColor="@color/black_87"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:fontType="medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.likeminds.feedsx.branding.customview.LMFeedTextView
                    android:id="@+id/tv_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:lineSpacingExtra="7sp"
                    android:textColor="@color/grey"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:fontType="regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    tools:text="@string/are_you_sure_you_want_to_remove_the_attached_video" />

                <com.likeminds.feedsx.branding.customview.LMFeedTextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="32dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:letterSpacing="0.04"
                    android:paddingVertical="12dp"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/black_40"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    app:fontType="medium"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_delete"
                    app:layout_constraintTop_toBottomOf="@id/tv_description"
                    app:layout_constraintVertical_weight="1" />

                <com.likeminds.feedsx.branding.customview.LMFeedTextView
                    android:id="@+id/tv_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginTop="28dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:letterSpacing="0.04"
                    android:paddingVertical="12dp"
                    android:text="@string/remove"
                    android:textAllCaps="true"
                    android:textColor="@color/black_20"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    app:fontType="medium"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_description"
                    app:textAllCaps="true"
                    app:textType="special" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>