<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_bottom_sheet">

        <View
            android:id="@+id/view"
            android:layout_width="100dp"
            android:layout_height="7dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_sheet_handle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_add_article"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_article"
                tools:ignore="ContentDescription" />

            <com.likeminds.feedsx.branding.customview.LMFeedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="19dp"
                android:paddingVertical="26dp"
                android:text="@string/add_article"
                android:textColor="@color/dark_grey"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:id="@+id/view_article_video_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cloudy_blue"
            app:layout_constraintTop_toBottomOf="@id/ll_add_article" />

        <LinearLayout
            android:id="@+id/ll_add_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_article_video_separator">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_video"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="19dp"
                android:paddingEnd="4dp"
                android:paddingVertical="26dp"
                android:text="@string/add_video"
                android:textColor="@color/dark_grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:paddingVertical="26dp"
                android:text="@string/max_200mb"
                android:textColor="@color/grey"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:id="@+id/view_video_pdf_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cloudy_blue"
            app:layout_constraintTop_toBottomOf="@id/ll_add_video" />

        <LinearLayout
            android:id="@+id/ll_add_pdf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_video_pdf_separator">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_pdf"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:paddingStart="19dp"
                android:paddingEnd="4dp"
                android:paddingVertical="26dp"
                android:text="@string/add_pdf"
                android:textColor="@color/dark_grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:paddingVertical="26dp"
                android:text="@string/max_200mb"
                android:textColor="@color/grey"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:id="@+id/view_pdf_link_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cloudy_blue"
            app:layout_constraintTop_toBottomOf="@id/ll_add_pdf" />

        <LinearLayout
            android:id="@+id/ll_add_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingHorizontal="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_pdf_link_separator">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_link"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="19dp"
                android:paddingVertical="26dp"
                android:text="@string/add_link"
                android:textColor="@color/dark_grey"
                android:textSize="16sp" />
        </LinearLayout>

        <include
            android:id="@+id/progress_bar"
            layout="@layout/lm_feed_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>